--- a/src/app/container/sections/home/home.component.scss
+++ b/src/app/container/sections/home/home.component.scss
@@ -1,7 +1,7 @@
 .cont{
     display:flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 120vh;
     justify-content: space-between;
     padding-left: 5vw;
     padding-right: 5vw;
