--- a/src/app/container/sections/section/section.component.scss
+++ b/src/app/container/sections/section/section.component.scss
@@ -1,7 +1,7 @@
 .cont{
     display:flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 140vh;
     justify-content: space-between;
     padding-left: 7.5vw;
     padding-right: 7.5vw;
