--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -100,3 +100,29 @@
     font-size:17px;
     margin-bottom:0;
   }
+
+  @media screen and (max-width:500px){
+    .footer-dark{
+      height: 18rem;
+    }
+    .footer-dark h3 {
+      margin-bottom:12px;
+      font-size:19px;
+    }
+    .footer-dark .item.text {
+      padding: 0 4%;
+      border-bottom: .85px solid rgb(95, 95, 95, 0.4);
+      padding-bottom: 6px;
+    }
+    .footer-dark .item.social > a {
+      font-size:17px;
+      width:32px;
+      height:32px;
+      line-height:32px;
+      border:1.1px solid;
+    }
+    .footer-dark .copyright {
+      padding-top:18px;
+      font-size:16.5px;
+    }
+  }
