--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -223,7 +223,7 @@
     padding-top: 15px;
 	background: #fff;
 	border-right: 1.1px solid rgb(117, 117, 117);
-	background-color: rgb(206, 201, 201);
+	background-color: #ccc;
 	// background:linear-gradient(45deg, rgb(220, 220, 221) 47.5%, rgb(214, 213, 213) 47.5%);
 	box-shadow: 0 0 5px #ccc;
 	.navbar-menu-brand{
